# avatar2-examples

./: README.md
INT-Rehosting/: README.md  blink-int.elf  blink_INTForwarder.py  pico-picoprobe.cfg  util.py
fitbit/: README.md  fitbit.cfg  fitbit_bluetooth_analysis.py
nucleo_l152re/: README.md  nucleo-l152re.cfg  nucleo_state_transfer.py
qemu_uboot/: README.md  qemu_uboot_avatar2.py  u-boot
rp_pico/: README.md  blink.elf  pico-blink-PANDA.py  pico-blink.py  pico-picoprobe.cfg
rp_pico/blink/: .gitignore  CMakeLists.txt  REAMDE.md
rp_pico/blink/src/: CMakeLists.txt  blink.c
wisec21_nrf51_ble/: README.md  first.py  second.py  third.py
